# oss-tldr

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  LICENSE  Makefile  PROGRESSIVE_LOADING_MIGRATION.md  PROJECT.md  README.md  docker-compose.prod.yml  docker-compose.yml  railway.toml
backend/: .dockerignore  .env.example  .env.production  .env_example  Dockerfile  config.py  main.py  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt
backend/api/: __init__.py  auth.py  deepdive.py  diff.py  groups.py  issues.py  people.py  prs.py  reports.py  repos.py  tldr.py  user_repos.py
backend/api/helpers/: __init__.py  groups.py
backend/api/routes/: __init__.py  auth.py  deepdive.py  diff.py  groups.py  reports.py  repos.py  users.py
backend/api/schemas/: __init__.py  auth.py  common.py  groups.py  reports.py  repos.py  users.py
backend/database/: __init__.py  connection.py  models.py  schema.sql
backend/database/models/: __init__.py  group.py  report.py  repository.py  user.py  user_report_access.py  user_repository.py
backend/groups/: ai.yaml
backend/middleware/: auth.py
backend/migrations/: README.md
backend/models/: github.py
backend/repositories/: __init__.py  base.py  groups.py  reports.py  repositories.py  user_repositories.py  users.py
backend/scripts/: run_checks.sh
backend/services/: deepdive_generator.py  diff_explainer.py  github_client.py  group_report.py  issue_summary.py  people_summary.py  tldr_generator.py
backend/utils/: dates.py  group_config.py  serializers.py  url.py
(+53 files in other folders)
